@@ -5,8 +5,6 @@ Please go ahead and assign things that are not already assigned to
 anybody else (assignments look like [Stefan]) to yourself - and please
 remove items from this list once they are complete.
 
-* merge nested and container <mapper>s from HEAD [Matt]
-
 * merge <redirector>s from HEAD [Matt]
 
 * merge "<apply> differentiates between empty & up-to-date" from HEAD [Matt]
