@@ -33,7 +33,7 @@ with the following attributes:</p>
   <tr>
     <td valign="top">type</td>
     <td valign="top">specifies one of the built-in implementations.</td>
-    <td rowspan="2" align="center" valign="middle">Exactly one of both</td>
+    <td rowspan="2" align="center" valign="middle">Exactly one of these</td>
   </tr>
   <tr>
     <td valign="top">classname</td>
@@ -72,14 +72,29 @@ this separator, use <code>${file.separator}</code> instead.</p>
 <p>The classpath can be specified via a nested
 <code>&lt;classpath&gt;</code>, as well - that is,
 a <a href="../using.html#path">path</a>-like structure.</p>
+<p><b>Since Ant 1.6.2,</b> nested File Mappers can
+be supplied via either <CODE>&lt;mapper&gt;</CODE> elements or
+<a href="../CoreTasks/typedef.html"><code>&lt;typedef&gt;</code></a>'d
+implementations of <CODE>org.apache.tools.ant.util.FileNameMapper</CODE>.
+If nested File Mappers are specified by either means, the mapper will be
+implicitly configured as a <a href="#composite-mapper">composite mapper</a>.
+</p>
+<hr/>
 <h3>The built-in mapper types are:</h3>
 <p>All built-in mappers are case-sensitive.</p>
+<p><b>As of Ant 1.6.2,</b> each of the built-in mapper implementation
+  types is directly accessible using a specific tagname. This makes it
+  possible for filename mappers to support attributes in addition to
+  the generally available <i>to</i> and <i>from</i>.<br/>
+  The <code>&lt;mapper type|classname=&quot;...&quot;&gt;</code> usage
+  form remains valid for reasons of backward compatibility.</p>
 <h4><a name="identity-mapper">identity</a></h4>
 <p>The target file name is identical to the source file name. Both
 <code>to</code> and <code>from</code> will be ignored.</p>
 <b>Examples:</b>
 <blockquote><pre>
 &lt;mapper type=&quot;identity&quot;/&gt;
+&lt;identitymapper /&gt;
 </pre></blockquote>
 <table border="1" cellpadding="2" cellspacing="0">
   <tr>
@@ -110,6 +125,7 @@ leading directory information stripped off. Both <code>to</code> and
 <b>Examples:</b>
 <blockquote><pre>
 &lt;mapper type=&quot;flatten&quot;/&gt;
+&lt;flattenmapper /&gt;
 </pre></blockquote>
 <table border="1" cellpadding="2" cellspacing="0">
   <tr>
@@ -139,6 +155,7 @@ leading directory information stripped off. Both <code>to</code> and
 <h5>Examples:</h5>
 <blockquote><pre>
 &lt;mapper type=&quot;merge&quot; to=&quot;archive.tar&quot;/&gt;
+&lt;mergemapper to=&quot;archive.tar&quot;/&gt;
 </pre></blockquote>
 <table border="1" cellpadding="2" cellspacing="0">
   <tr>
@@ -173,6 +190,7 @@ that don't match the <code>from</code> pattern will be ignored.</p>
 <b>Examples:</b>
 <blockquote><pre>
 &lt;mapper type=&quot;glob&quot; from=&quot;*.java&quot; to=&quot;*.java.bak&quot;/&gt;
+&lt;globmapper from=&quot;*.java&quot; to=&quot;*.java.bak&quot;/&gt;
 </pre></blockquote>
 <table border="1" cellpadding="2" cellspacing="0">
   <tr>
@@ -198,6 +216,7 @@ that don't match the <code>from</code> pattern will be ignored.</p>
 </table>
 <blockquote><pre>
 &lt;mapper type=&quot;glob&quot; from=&quot;C*ies&quot; to=&quot;Q*y&quot;/&gt;
+&lt;globmapper from=&quot;C*ies&quot; to=&quot;Q*y&quot;/&gt;
 </pre></blockquote>
 <table border="1" cellpadding="2" cellspacing="0">
   <tr>
@@ -268,6 +287,7 @@ jakarta-ORO and finally try jakarta-regexp.</li>
 <b>Examples:</b>
 <blockquote><pre>
 &lt;mapper type=&quot;regexp&quot; from=&quot;^(.*)\.java$$&quot; to=&quot;\1.java.bak&quot;/&gt;
+&lt;regexpmapper from=&quot;^(.*)\.java$$&quot; to=&quot;\1.java.bak&quot;/&gt;
 </pre></blockquote>
 <table border="1" cellpadding="2" cellspacing="0">
   <tr>
@@ -293,6 +313,7 @@ jakarta-ORO and finally try jakarta-regexp.</li>
 </table>
 <blockquote><pre>
 &lt;mapper type=&quot;regexp&quot; from=&quot;^(.*)/([^/]+)/([^/]*)$$&quot; to=&quot;\1/\2/\2-\3&quot;/&gt;
+&lt;regexpmapper from=&quot;^(.*)/([^/]+)/([^/]*)$$&quot; to=&quot;\1/\2/\2-\3&quot;/&gt;
 </pre></blockquote>
 <table border="1" cellpadding="2" cellspacing="0">
   <tr>
@@ -318,6 +339,7 @@ jakarta-ORO and finally try jakarta-regexp.</li>
 </table>
 <blockquote><pre>
 &lt;mapper type=&quot;regexp&quot; from=&quot;^(.*)\.(.*)$$&quot; to=&quot;\2.\1&quot;/&gt;
+&lt;regexpmapper from=&quot;^(.*)\.(.*)$$&quot; to=&quot;\2.\1&quot;/&gt;
 </pre></blockquote>
 <table border="1" cellpadding="2" cellspacing="0">
   <tr>
@@ -350,8 +372,8 @@ pattern placeholder. This mapper is particularly useful in combination
 with <code>&lt;uptodate&gt;</code> and <code>&lt;junit&gt;</code> output.</p>
 <b>Example:</b>
 <blockquote><pre>
-&lt;mapper type="package"
-        from="*Test.java" to="TEST-*Test.xml"/&gt;
+&lt;mapper type="package" from="*Test.java" to="TEST-*Test.xml"/&gt;
+&lt;packagemapper from="*Test.java" to="TEST-*Test.xml"/&gt;
 </pre></blockquote>
 <table border="1" cellpadding="2" cellspacing="0">
   <tr>
@@ -367,7 +389,7 @@ with <code>&lt;uptodate&gt;</code> and <code>&lt;junit&gt;</code> output.</p>
     <td valign="top">ignored</td>
   </tr>
 </table>
-<h4><a name="unpackage-mapper">unpackage (since ant 1.6)</a></h4>
+<h4><a name="unpackage-mapper">unpackage (since ant 1.6.0)</a></h4>
   <p>This mapper is the inverse of the <a href="#package-mapper">package</a> mapper.
     It replaces the dots in a package name with directory separators. This
     is useful for matching XML formatter results against their JUnit test
@@ -376,8 +398,8 @@ with <code>&lt;uptodate&gt;</code> and <code>&lt;junit&gt;</code> output.</p>
   </p>
 <b>Example:</b>
 <blockquote><pre>
-&lt;mapper type="unpackage"
-        from="TEST-*Test.xml" to="${test.src.dir}/*Test.java"&gt;
+&lt;mapper type="unpackage" from="TEST-*Test.xml" to="${test.src.dir}/*Test.java"&gt;
+&lt;unpackagemapper from="TEST-*Test.xml" to="${test.src.dir}/*Test.java"&gt;
 </pre></blockquote>
 <table border="1" cellpadding="2" cellspacing="0">
   <tr>
@@ -389,7 +411,74 @@ with <code>&lt;uptodate&gt;</code> and <code>&lt;junit&gt;</code> output.</p>
     <td valign="top"><code>${test.src.dir}/org/acme/AcmeTest.java</code></td>
   </tr>
 </table>
-
+<h4><a name="composite-mapper">composite (since ant 1.6.2)</a></h4>
+  <p>This mapper implementation can contain multiple nested mappers.
+    File mapping is performed by passing the source filename to each nested
+    <code>&lt;mapper&gt;</code> in turn, returning all results.
+    The <i>to</i> and <i>from</i> attributes are ignored.</p>
+<b>Examples:</b>
+<blockquote><pre>
+&lt;compositemapper&gt;
+  &lt;identitymapper /&gt;
+  &lt;packagemapper from="*.java" to="*"/&gt;
+&lt;/compositemapper&gt;
+</pre></blockquote>
+<table border="1" cellpadding="2" cellspacing="0">
+  <tr>
+    <td valign="top"><b>Source file name</b></td>
+    <td valign="top"><b>Target file names</b></td>
+  </tr>
+  <tr>
+    <td valign="center" rowspan="2"><code>foo/bar/A.java</code></td>
+    <td valign="top"><code>foo/bar/A.java</code></td>
+  </tr>
+  <tr>
+    <td valign="top"><code>foo.bar.A</code></td>
+  </tr>
+</table>
+  <p>The composite mapper has no corresponding
+    <code>&lt;mapper <b>type</b>&gt;</code> attribute.
+  </p>
+<h4><a name="chained-mapper">chained (since ant 1.6.2)</a></h4>
+  <p>This mapper implementation can contain multiple nested mappers.
+    File mapping is performed by passing the source filename to the first
+    nested mapper, its results to the second, and so on.  The target filenames
+    generated by the last nested mapper comprise the ultimate results of the
+    mapping operation.  The <i>to</i> and <i>from</i> attributes are ignored.</p>
+<b>Examples:</b>
+<blockquote><pre>
+&lt;chainedmapper&gt;
+  &lt;flattenmapper /&gt;
+  &lt;globmapper from="*" to="new/path/*"/&gt;
+  &lt;mapper&gt;
+    &lt;globmapper from="*" to="*1"/&gt;
+    &lt;globmapper from="*" to="*2"/&gt;
+  &lt;/mapper&gt;
+&lt;/chainedmapper&gt;
+</pre></blockquote>
+<table border="1" cellpadding="2" cellspacing="0">
+  <tr>
+    <td valign="top"><b>Source file name</b></td>
+    <td valign="top"><b>Target file names</b></td>
+  </tr>
+  <tr>
+    <td valign="center" rowspan="2"><code>foo/bar/A.java</code></td>
+    <td valign="top"><code>new/path/A.java1</code></td>
+  </tr>
+  <tr>
+    <td valign="top"><code>new/path/A.java2</code></td>
+  </tr>
+  <tr>
+    <td valign="center" rowspan="2"><code>boo/far/B.java</code></td>
+    <td valign="top"><code>new/path/B.java1</code></td>
+  </tr>
+  <tr>
+    <td valign="top"><code>new/path/B.java2</code></td>
+  </tr>
+</table>
+  <p>The chained mapper has no corresponding
+    <code>&lt;mapper <b>type</b>&gt;</code> attribute.
+  </p>
 <hr>
 <p align="center">Copyright &copy; 2000-2004 The Apache Software Foundation. All rights
 Reserved.</p>
