@@ -23,6 +23,8 @@ import org.apache.tools.ant.AntClassLoader;
 import org.apache.tools.ant.BuildException;
 import org.apache.tools.ant.Project;
 import org.apache.tools.ant.util.FileNameMapper;
+import org.apache.tools.ant.util.CompositeMapper;
+import org.apache.tools.ant.util.ContainerMapper;
 
 /**
  * Element to define a FileNameMapper.
@@ -31,13 +33,24 @@ import org.apache.tools.ant.util.FileNameMapper;
 public class Mapper extends DataType implements Cloneable {
 
     protected MapperType type = null;
+    protected String classname = null;
+    protected Path classpath = null;
+    protected String from = null;
+    protected String to = null;
 
+    private ContainerMapper container = null;
+
+    /**
+     * Construct a new <CODE>Mapper</CODE> element.
+     * @param p   the owning Ant <CODE>Project</CODE>.
+     */
     public Mapper(Project p) {
         setProject(p);
     }
 
     /**
-     * Set the type of FileNameMapper to use.
+     * Set the type of <code>FileNameMapper</code> to use.
+     * @param type   the <CODE>MapperType</CODE> enumerated attribute.
      */
     public void setType(MapperType type) {
         if (isReference()) {
@@ -46,7 +59,37 @@ public class Mapper extends DataType implements Cloneable {
         this.type = type;
     }
 
-    protected String classname = null;
+    /**
+     * Add a nested <CODE>FileNameMapper</CODE>.
+     * @param fileNameMapper   the <CODE>FileNameMapper</CODE> to add.
+     */
+    public void add(FileNameMapper fileNameMapper) {
+        if (isReference()) {
+            throw noChildrenAllowed();
+        }
+        if (container == null) {
+            if (type == null && classname == null) {
+                container = new CompositeMapper();
+            } else {
+                FileNameMapper m = getImplementation();
+                if (m instanceof ContainerMapper) {
+                    container = (ContainerMapper)m;
+                } else {
+                    throw new BuildException(String.valueOf(m)
+                        + " mapper implementation does not support nested mappers!");
+                }
+            }
+        }
+        container.add(fileNameMapper);
+    }
+
+    /**
+     * Add a Mapper
+     * @param mapper the mapper to add
+     */
+    public void addConfiguredMapper(Mapper mapper) {
+        add(mapper.getImplementation());
+    }
 
     /**
      * Set the class name of the FileNameMapper to use.
@@ -57,8 +100,6 @@ public class Mapper extends DataType implements Cloneable {
         }
         this.classname = classname;
     }
-
-    protected Path classpath = null;
 
     /**
      * Set the classpath to load the FileNameMapper through (attribute).
@@ -98,8 +139,6 @@ public class Mapper extends DataType implements Cloneable {
         createClasspath().setRefid(r);
     }
 
-    protected String from = null;
-
     /**
      * Set the argument to FileNameMapper.setFrom
      */
@@ -109,8 +148,6 @@ public class Mapper extends DataType implements Cloneable {
         }
         this.from = from;
     }
-
-    protected String to = null;
 
     /**
      * Set the argument to FileNameMapper.setTo
@@ -143,44 +180,55 @@ public class Mapper extends DataType implements Cloneable {
             return getRef().getImplementation();
         }
 
-        if (type == null && classname == null) {
-            throw new BuildException("one of the attributes type or classname is required");
+        if (type == null && classname == null && container == null) {
+            throw new BuildException(
+                "nested mapper or "
+                + "one of the attributes type or classname is required");
+        }
+
+        if (container != null) {
+            return container;
         }
 
         if (type != null && classname != null) {
-            throw new BuildException("must not specify both type and classname attribute");
+            throw new BuildException(
+                "must not specify both type and classname attribute");
         }
 
         try {
-            if (type != null) {
-                classname = type.getImplementation();
-            }
-
-            Class c = null;
-            if (classpath == null) {
-                c = Class.forName(classname);
-            } else {
-                AntClassLoader al = getProject().createClassLoader(classpath);
-                c = Class.forName(classname, true, al);
-            }
-
-            FileNameMapper m = (FileNameMapper) c.newInstance();
+            FileNameMapper m
+                = (FileNameMapper)(getImplementationClass().newInstance());
             final Project project = getProject();
             if (project != null) {
                 project.setProjectReference(m);
             }
             m.setFrom(from);
             m.setTo(to);
+
             return m;
         } catch (BuildException be) {
             throw be;
         } catch (Throwable t) {
             throw new BuildException(t);
-        } finally {
-            if (type != null) {
-                classname = null;
-            }
         }
+    }
+
+     /**
+     * Gets the Class object associated with the mapper implementation.
+     * @return <CODE>Class</CODE>.
+     */
+    protected Class getImplementationClass() throws ClassNotFoundException {
+
+        String classname = this.classname;
+        if (type != null) {
+            classname = type.getImplementation();
+        }
+
+        ClassLoader loader = (classpath == null)
+            ? getClass().getClassLoader()
+            : getProject().createClassLoader(classpath);
+
+        return Class.forName(classname, true, loader);
     }
 
     /**
