@@ -7,6 +7,17 @@ filterchain=org.apache.tools.ant.types.FilterChain
 filterreader=org.apache.tools.ant.types.AntFilterReader
 filterset=org.apache.tools.ant.types.FilterSet
 mapper=org.apache.tools.ant.types.Mapper
+# different filename mappers
+identitymapper=org.apache.tools.ant.util.IdentityMapper
+flattenmapper=org.apache.tools.ant.util.FlatFileNameMapper
+globmapper=org.apache.tools.ant.util.GlobPatternMapper
+mergemapper=org.apache.tools.ant.util.MergingMapper
+regexpmapper=org.apache.tools.ant.util.RegexpPatternMapper
+packagemapper=org.apache.tools.ant.util.PackageNameMapper
+unpackagemapper=org.apache.tools.ant.util.UnPackageNameMapper
+compositemapper=org.apache.tools.ant.util.CompositeMapper
+chainedmapper=org.apache.tools.ant.util.ChainedMapper
+
 path=org.apache.tools.ant.types.Path
 patternset=org.apache.tools.ant.types.PatternSet
 regexp=org.apache.tools.ant.types.RegularExpression
