@@ -204,6 +204,11 @@ Other changes:
 * <loadproperties> supports loading from a resource.
   Bugzilla Report 28340.
 
+* Nested file mappers and a container mapper implementation have been
+  introduced.  Additionally, the <mapper> element now accepts "defined"
+  nested FileNameMapper implementations directly, allowing a usage
+  comparable to those of <condition>, <filter>, and <selector>.
+
 Changes from Ant 1.6.0 to Ant 1.6.1
 =============================================
 
